<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SaathHi"
            android:textSize="40dp"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shaperound"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/weather">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cloudy2"
            android:id="@+id/conditionsIcons"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/temp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="50dp"
            android:id="@+id/tempText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/condition"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:textSize="20dp"
            android:id="@+id/conitionText"
            android:fontFamily="monospace"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/faqs"
        android:background="@drawable/shaperound">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/questions" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solutions"
            android:textSize="20dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shaperound">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/news" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/news"
            android:textSize="20dp"
            android:gravity="center"/>
    </LinearLayout>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="113dp"
            android:src="@drawable/adds"/>

    </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="120dp"
            android:gravity="center"
            android:background="@drawable/mic"
            android:id="@+id/assistant"
            android:onClick="AssistCall"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap Here"
            android:textSize="20dp"/>
    </LinearLayout>


</LinearLayout>


